--- a/Home/index.html
+++ b/Home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Sophist Empire - Creative & Digital Solutions</title>
+            <title>SOPHIST EMPIRE - Creative & Digital Solutions</title>
                 <link rel="stylesheet" href="style.css">
                     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
                         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,7 +12,7 @@
 
                             <header class="main-header">
                                     <div class="container">
-                                                <h1 class="logo">Sophist Empire</h1>
+                                                <h1 class="logo">SOPHIST EMPIRE</h1>
                                                             <nav class="main-nav">
                                                                             <ul>
                                                                                                 <li><a href="#home">Home</a></li>
