--- a/Home/index.html
+++ b/Home/index.html
@@ -35,9 +35,9 @@
     <section id="about" class="about-me-section container">
         <div class="about-content">
             <img src="images/professional-photo.jpg" alt="Maruf - Professional Headshot" class="profile-photo">
-            <h3>About Maruf & Sophist Empire</h3>
+            <h3>About Me & Sophist Empire</h3>
             <p>
-                Hello! I'm Maruf, the driving force behind Sophist Empire. I'm a passionate and versatile digital professional dedicated to creating compelling online experiences. With a strong foundation in copywriting and content creation, I specialize in crafting narratives that captivate audiences and convert visitors into loyal customers.
+                Hello! I'm Maruf Quadri, the driving force behind Sophist Empire. I'm a passionate and versatile digital professional dedicated to creating compelling online experiences. With a strong foundation in copywriting and content creation, I specialize in crafting narratives that captivate audiences and convert visitors into loyal customers.
             </p>
             <p>
                 At Sophist Empire, we believe in the power of strategic digital presence. From engaging website content to impactful social media campaigns and seamless user experiences, my goal is to blend creativity with data-driven insights to deliver measurable results for your brand. Let's build something exceptional together.
