--- a/Home/tiktokcontent.html
+++ b/Home/tiktokcontent.html
@@ -9,6 +9,12 @@
             margin-bottom: 30px;
             text-align: center;
         }
+        .tiktok-link-container img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+        }
     </style>
 </head>
 <body>
@@ -32,16 +38,19 @@
 
             <div class="tiktok-link-container">
                 <h3>Photo Post 1</h3>
+                <img src="[PLACEHOLDER_IMAGE_URL_1]" alt="TikTok Photo Post 1 Cover">
                 <p><a href="https://www.tiktok.com/@unstoppableyou_official/photo/7454126549973945605?is_from_webapp=1&sender_device=mobile&sender_web_id=7510002507851777541" target="_blank">View this TikTok Post</a></p>
             </div>
 
             <div class="tiktok-link-container">
                 <h3>Photo Post 2</h3>
+                <img src="https://p16-common-sign-va.tiktokcdn-us.com/tos-maliva-i-photomode-us/2b93089ba176465bb7778a262766ef50~tplv-photomode-image-v1:q70.jpeg?dr=8793&refresh_token=de3a8f52&x-expires=1749859200&x-signature=NetWrL%2Bj9%2FvBfvfL78OzfFCVNDw%3D&t=5897f7ec&ps=b40d0ec8&shp=d05b14bd&shcp=1d1a97fc&idc=useast5&s=AWEME_DETAIL&biz_tag=tt_photomode&sc=image" alt="TikTok Photo Post 2 Cover">
                 <p><a href="https://www.tiktok.com/@unstoppableyou_official/photo/7434221094623628599?is_from_webapp=1&sender_device=mobile&sender_web_id=7510002507851777541" target="_blank">View this TikTok Post</a></p>
             </div>
 
             <div class="tiktok-link-container">
                 <h3>Photo Post 3</h3>
+                <img src="[PLACEHOLDER_IMAGE_URL_3]" alt="TikTok Photo Post 3 Cover">
                 <p><a href="https://www.tiktok.com/@unstoppableyou_official/photo/7498834392211574071?is_from_webapp=1&sender_device=mobile&sender_web_id=7510002507851777541" target="_blank">View this TikTok Post</a></p>
             </div>
 
