--- a/Home/tiktokcontent.html
+++ b/Home/tiktokcontent.html
@@ -12,7 +12,8 @@
         }
         .tiktok-link-container img {
             max-width: 100%;
-            height: auto;
+            height: 200px; /* Set the height to match portfolio thumbnails */
+            object-fit: cover; /* Maintain aspect ratio and cover the container */
             margin-bottom: 10px;
             border: 1px solid #ccc;
         }
