--- a/Home/tiktokcontent.html
+++ b/Home/tiktokcontent.html
@@ -12,18 +12,22 @@
             gap: 30px;
             margin-top: 20px;
         }
-        .tiktok-link-container {
+        .tiktok-post {
+            margin-bottom: 40px;
             text-align: center;
         }
-        .tiktok-link-container img {
+        .tiktok-post img {
             max-width: 100%;
             height: 400px; /* Exactly two times the updated thumbnail height */
             object-fit: cover;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             border: 1px solid #ccc;
+            border-radius: 8px; /* Add a slight border radius for a softer look */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
         }
-        .tiktok-link-container h3 {
-            margin-top: 0; /* Adjust heading spacing */
+        .tiktok-post h3 {
+            margin-top: 0;
+            color: #007bff; /* Use your website's primary color for headings */
         }
         .tiktok-link-back {
             text-align: center; /* Center the link back to TikTok page */
@@ -48,29 +52,26 @@
 
     <div class="container">
         <section class="content-section">
-            <div class="tiktok-link-container">
-                <h3>Photo Post 1</h3>
+            <div class="tiktok-post">
+                <h3>Inspirational Post 1</h3>
                 <a href="https://www.tiktok.com/@unstoppableyou_official/photo/7454126549973945605?is_from_webapp=1&sender_device=mobile&sender_web_id=7510002507851777541" target="_blank">
                     <img src="https://p16-common-sign-va.tiktokcdn-us.com/tos-maliva-i-photomode-us/f7bbb01643114bc8a5cda99fa3e1161d~tplv-photomode-image-v1:q70.jpeg?dr=8793&refresh_token=a3b48298&x-expires=1749862800&x-signature=EqPTYjzDoPsXyyM5Xppk0EPEhfM%3D&t=5897f7ec&ps=b40d0ec8&shp=d05b14bd&shcp=1d1a97fc&idc=useast5&s=AWEME_DETAIL&biz_tag=tt_photomode&sc=image" alt="TikTok Photo Post 1 Cover">
                 </a>
-                <p><a href="https://www.tiktok.com/@unstoppableyou_official/photo/7454126549973945605?is_from_webapp=1&sender_device=mobile&sender_web_id=7510002507851777541" target="_blank">View this TikTok Post</a></p>
-            </div>
+                </div>
 
-            <div class="tiktok-link-container">
-                 <h3>Photo Post 2</h3>
+            <div class="tiktok-post">
+                 <h3>Motivational Post 2</h3>
                  <a href="https://www.tiktok.com/@unstoppableyou_official/photo/7434221094623628599?is_from_webapp=1&sender_device=mobile&sender_web_id=7510002507851777541" target="_blank">
                      <img src="https://p16-common-sign-va.tiktokcdn-us.com/tos-maliva-i-photomode-us/2b93089ba176465bb7778a262766ef50~tplv-photomode-image-v1:q70.jpeg?dr=8793&refresh_token=de3a8f52&x-expires=1749859200&x-signature=NetWrL%2Bj9%2FvBfvfL78OzfFCVNDw%3D&t=5897f7ec&ps=b40d0ec8&shp=d05b14bd&shcp=1d1a97fc&idc=useast5&s=AWEME_DETAIL&biz_tag=tt_photomode&sc=image" alt="TikTok Photo Post 2 Cover">
                  </a>
-                 <p><a href="https://www.tiktok.com/@unstoppableyou_official/photo/7434221094623628599?is_from_webapp=1&sender_device=mobile&sender_web_id=7510002507851777541" target="_blank">View this TikTok Post</a></p>
-             </div>
+                 </div>
 
-             <div class="tiktok-link-container">
-                 <h3>Photo Post 3</h3>
+             <div class="tiktok-post">
+                 <h3>A Story to Connect With</h3>
                  <a href="https://www.tiktok.com/@unstoppableyou_official/photo/7498834392211574071?is_from_webapp=1&sender_device=mobile&sender_web_id=7510002507851777541" target="_blank">
                      <img src="https://p16-common-sign-va.tiktokcdn-us.com/tos-maliva-i-photomode-us/1b2c3c90533f4ba09ed067af1ca0849a~tplv-photomode-image-v1:q70.jpeg?dr=8793&refresh_token=8947e905&x-expires=1749862800&x-signature=6iFtlvq%2FZ0qAKPQs39suh6pUzjM%3D&t=5897f7ec&ps=b40d0ec8&shp=d05b14bd&shcp=1d1a97fc&idc=useast5&s=AWEME_DETAIL&biz_tag=tt_photomode&sc=image" alt="TikTok Photo Post 3 Cover">
                  </a>
-                 <p><a href="https://www.tiktok.com/@unstoppableyou_official/photo/7498834392211574071?is_from_webapp=1&sender_device=mobile&sender_web_id=7510002507851777541" target="_blank">View this TikTok Post</a></p>
-             </div>
+                 </div>
 
             <p class="tiktok-link-back"><a href="https://www.tiktok.com/@unstoppableyou_official" target="_blank">Visit our main TikTok page</a></p>
         </section>
