--- a/Home/index.html
+++ b/Home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOPHIST EMPIRE - Creative & Digital Solutions</title>
+    <title>Sophist Empire - Creative & Digital Solutions</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,7 +12,9 @@
 
     <header class="main-header">
         <div class="container">
-            <h1 class="logo">SOPHIST EMPIRE</h1>
+            <a href="index.html" class="logo">
+                <img src="images/sophist-empire-logo-gold-white-1.png" alt="Sophist Empire Logo">
+            </a>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -35,9 +37,9 @@
     <section id="about" class="about-me-section container">
         <div class="about-content">
             <img src="images/professional-photo.jpg" alt="Maruf - Professional Headshot" class="profile-photo">
-            <h3>About Me & Sophist Empire</h3>
+            <h3>About Maruf & Sophist Empire</h3>
             <p>
-                Hello! I'm Maruf Quadri, the driving force behind Sophist Empire. I'm a passionate and versatile digital professional dedicated to creating compelling online experiences. With a strong foundation in copywriting and content creation, I specialize in crafting narratives that captivate audiences and convert visitors into loyal customers.
+                Hello! I'm Maruf, the driving force behind Sophist Empire. I'm a passionate and versatile digital professional dedicated to creating compelling online experiences. With a strong foundation in copywriting and content creation, I specialize in crafting narratives that captivate audiences and convert visitors into loyal customers.
             </p>
             <p>
                 At Sophist Empire, we believe in the power of strategic digital presence. From engaging website content to impactful social media campaigns and seamless user experiences, my goal is to blend creativity with data-driven insights to deliver measurable results for your brand. Let's build something exceptional together.
@@ -84,7 +86,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <a href="tiktokcontent.html">
+                <a href="tiktikcontent.html">
                     <img src="images/tiktok-content.jpg" alt="TikTok Content Thumbnail">
                     <div class="overlay">
                         <h3>TikTok Content Creation</h3>
