--- a/Home/tiktokcontent.html
+++ b/Home/tiktokcontent.html
@@ -38,7 +38,9 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <h1 class="logo">SOPHIST EMPIRE</h1>
+            <a href="index.html" class="logo">
+                <img src="images/sophist-empire-logo-gold-white-1.png" alt="SOPHIST EMPIRE Logo">
+            </a>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
