--- a/Home/index.html
+++ b/Home/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <a href="tiktikcontent.html">
+                <a href="tiktokcontent.html">
                     <img src="images/tiktok-content.jpg" alt="TikTok Content Thumbnail">
                     <div class="overlay">
                         <h3>TikTok Content Creation</h3>
