--- a/Home/index.html
+++ b/Home/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -86,7 +87,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <a href="tiktokcontent.html">
+                <a href="tiktikcontent.html">
                     <img src="images/tiktok-content.jpg" alt="TikTok Content Thumbnail">
                     <div class="overlay">
                         <h3>TikTok Content Creation</h3>
