--- a/Home/tiktokcontent.html
+++ b/Home/tiktokcontent.html
@@ -34,6 +34,7 @@
             margin-top: 30px;
         }
     </style>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="main-header">
