--- a/Home/index.html
+++ b/Home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sophist Empire - Creative & Digital Solutions</title>
+    <title>SOPHIST EMPIRE - Creative & Digital Solutions</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -52,11 +52,13 @@
         <h2>Our Portfolio</h2>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="images/blog-series-thumbnail.jpg" alt="Blog Series Thumbnail">
-                <div class="overlay">
-                    <h3>Blog & Content Series</h3>
-                    <p>Engaging content strategies</p>
-                </div>
+                <a href="blog-series.html">
+                    <img src="images/blog-series-thumbnail.jpg" alt="Blog Series Thumbnail">
+                    <div class="overlay">
+                        <h3>Blog & Content Series</h3>
+                        <p>Engaging content strategies</p>
+                    </div>
+                </a>
             </div>
             <div class="portfolio-item">
                 <img src="images/sales-page-thumbnail.jpg" alt="Sales Page Thumbnail">
@@ -73,7 +75,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="images/about-us-page-thumbnail.jpg" alt="About Us Page Thumbnail">
+                <img src="images/about-us-page-thumbnail.jpg" alt="About Us Page Design">
                 <div class="overlay">
                     <h3>About Us Page Design</h3>
                     <p>Telling your brand story</p>
@@ -87,7 +89,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <a href="tiktokcontent.html">
+                <a href="tiktikcontent.html">
                     <img src="images/tiktok-content.jpg" alt="TikTok Content Thumbnail">
                     <div class="overlay">
                         <h3>TikTok Content Creation</h3>
