--- a/Home/blog-series.html
+++ b/Home/blog-series.html
@@ -8,6 +8,94 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        .content-area {
+            display: flex;
+            gap: 30px;
+        }
+        .main-content {
+            flex: 2; /* Takes up 2/3 of the available space */
+        }
+        .sidebar {
+            flex: 1; /* Takes up 1/3 of the available space */
+            background-color: #f9f9f9;
+            padding: 20px;
+            border: 1px solid #eee;
+            border-radius: 8px;
+        }
+        .sidebar h3 {
+            color: #007bff;
+            margin-top: 0;
+            margin-bottom: 15px;
+        }
+        .sidebar ul {
+            list-style: none;
+            padding-left: 0;
+            margin-bottom: 20px;
+        }
+        .sidebar ul li {
+            margin-bottom: 10px;
+        }
+        .sidebar a {
+            text-decoration: none;
+        }
+        .sidebar .search-bar form {
+            display: flex;
+        }
+        .sidebar .search-bar input[type="text"] {
+            width: 70%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px 0 0 5px;
+            box-sizing: border-box;
+        }
+        .sidebar .search-bar button[type="submit"] {
+            width: 30%;
+            padding: 10px;
+            margin-bottom: 15px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 0 5px 5px 0;
+            cursor: pointer;
+        }
+        .sidebar .call-to-action {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #e9ecef;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .sidebar .featured-content a {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        /* Responsive layout - make the sidebar stack on top of the content on small screens */
+        @media (max-width: 768px) {
+            .content-area {
+                flex-direction: column;
+            }
+            .sidebar {
+                width: 100%;
+                margin-top: 30px;
+            }
+            .sidebar .search-bar form {
+                display: block; /* Make form elements stack on small screens */
+            }
+            .sidebar .search-bar input[type="text"] {
+                width: 100%;
+                border-radius: 5px; /* Full rounded corners when stacked */
+                margin-bottom: 10px;
+            }
+            .sidebar .search-bar button[type="submit"] {
+                width: 100%;
+                border-radius: 5px;
+            }
+        }
+    </style>
 </head>
 <body>
     <header class="main-header">
@@ -18,10 +106,11 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="index.html#about">About Us</a></li>
                     <li><a href="index.html#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
+                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="blog-series.html">All Blog Posts</a></li>
+                    </ul>
             </nav>
         </div>
     </header>
@@ -30,43 +119,71 @@
         <section class="content-section">
             <h2>Our Blog & Content Series</h2>
             <img src="images/blog-series-thumbnail.jpg" alt="Blog Series Thumbnail" style="max-width: 300px; margin: 20px auto; display: block;">
-            <p>Welcome to the SOPHIST EMPIRE blog, your source for inspiration, motivation, and expert insights on creative digital solutions, effective copywriting, and impactful content marketing.</p>
+            <p>Welcome to the SOPHIST EMPIRE blog, your destination for in-depth articles and comprehensive series on creative digital solutions, effective copywriting, and impactful content marketing. Dive into our latest insights and learn how to elevate your online presence.</p>
 
-            <h3>Full Blog Series</h3>
+            <div class="content-area">
+                <main class="main-content">
+                    <h3>Full Blog Series</h3>
 
-            <div class="blog-post" style="margin-bottom: 40px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
-                <h4>Unlocking Your Creative Potential: Simple Techniques to Spark Innovation</h4>
-                <p>June 9, 2025</p>
-                <img src="images/website-creation-thumbnail.jpg" alt="Abstract brain or lightbulb" style="max-width: 100%; margin-bottom: 15px;">
-                <p>Creativity isn't a magical gift; it's a muscle you can train. In this post, we explore simple yet powerful techniques to unlock your creative potential. From brainstorming exercises to changing your environment, discover how to spark innovation and bring fresh ideas to your digital projects.</p>
-            </div>
+                    <div class="blog-post" style="margin-bottom: 40px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
+                        <h4>[Title of Your First Blog Post]</h4>
+                        <p>June 9, 2025</p>
+                        <img src="images/website-creation-thumbnail.jpg" alt="Abstract brain or lightbulb" style="max-width: 100%; margin-bottom: 15px;">
+                        <p>Creativity isn't a magical gift; it's a muscle you can train. In this post, we explore simple yet powerful techniques to unlock your creative potential. From brainstorming exercises to changing your environment, discover how to spark innovation and bring fresh ideas to your digital projects.</p>
+                    </div>
 
-            <div class="blog-post" style="margin-bottom: 40px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
-                <h4>The Power of Words: Crafting Compelling Copy that Converts</h4>
-                <p>June 9, 2025</p>
-                <img src="images/sales-page-thumbnail.jpg" alt="Stylized upward arrow or graph" style="max-width: 100%; margin-bottom: 15px;">
-                <p>Words have the power to persuade, connect, and convert. Learn the art of crafting compelling copy that resonates with your audience and drives results. We'll cover key principles of persuasive writing, from understanding your audience to writing effective calls to action.</p>
-            </div>
+                    <div class="blog-post" style="margin-bottom: 40px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
+                        <h4>[Title of Your Second Blog Post]</h4>
+                        <p>June 9, 2025</p>
+                        <img src="images/sales-page-thumbnail.jpg" alt="Stylized upward arrow or graph" style="max-width: 100%; margin-bottom: 15px;">
+                        <p>Words have the power to persuade, connect, and convert. Learn the art of crafting compelling copy that resonates with your audience and drives results. We'll cover key principles of persuasive writing, from understanding your audience to writing effective calls to action.</p>
+                    </div>
 
-            <div class="blog-post" style="margin-bottom: 40px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
-                <h4>Content is King: Strategies for Creating Engaging and Valuable Content</h4>
-                <p>June 9, 2025</p>
-                <img src="images/blog-series-thumbnail.jpg" alt="Open notebook with pen" style="max-width: 100%; margin-bottom: 15px;">
-                <p>In the digital landscape, content is the cornerstone of connection and engagement. Discover effective strategies for creating valuable and engaging content that attracts your target audience, builds trust, and establishes your brand as an authority in your niche.</p>
-            </div>
+                    </main>
 
-            <div class="blog-post" style="margin-bottom: 40px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
-                <h4>Staying Motivated in the Digital Age: Tips for Consistent Progress</h4>
-                <p>June 9, 2025</p>
-                <img src="images/professional-photo.jpg" alt="Person looking determined" style="max-width: 100%; margin-bottom: 15px;">
-                <p>The digital world can be both inspiring and overwhelming. Learn practical tips and techniques to stay motivated, overcome challenges, and maintain consistent progress on your digital projects and goals. Cultivate a mindset for success in the ever-evolving online environment.</p>
-            </div>
+                <aside class="sidebar">
+                    <h3>Navigation</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#portfolio">Portfolio</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="blog-series.html">All Blog Posts</a></li>
+                        </ul>
 
-            <div class="blog-post" style="margin-bottom: 40px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
-                <h4>Building Your Brand Story: Connecting with Your Audience on a Deeper Level</h4>
-                <p>June 9, 2025</p>
-                <img src="images/about-us-page-thumbnail.jpg" alt="Abstract human figures connecting" style="max-width: 100%; margin-bottom: 15px;">
-                <p>Your brand is more than just a logo or a product; it's a story that resonates with your audience. Explore the key elements of building a compelling brand story that connects with your audience on a deeper level, fosters loyalty, and sets you apart from the competition.</p>
+                    <h3>About the Author</h3>
+                    <p>Learn more about Maruf, the founder of SOPHIST EMPIRE and the voice behind this blog.</p>
+                    <a href="index.html#about">Read More</a>
+
+                    <div class="search-bar">
+                        <h3>Search</h3>
+                        <form action="https://www.google.com/search" method="get" target="_blank">
+                            <input type="hidden" name="sitesearch" value="sophistempire.github.io">
+                            <input type="text" name="q" placeholder="Search our blog...">
+                            <button type="submit"><i class="fas fa-search"></i></button>
+                        </form>
+                    </div>
+
+                    <h3>Follow Us</h3>
+                    <ul class="footer-social-links" style="display: flex; flex-direction: column; align-items: flex-start;">
+                        <li><a href="https://www.instagram.com/unstoppableyou_official1" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i> Instagram</a></li>
+                        <li><a href="https://x.com/_UnstoppableYou" target="_blank" aria-label="X (formerly Twitter)"><i class="fab fa-x-twitter"></i> Twitter</a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61553417041355" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                        </ul>
+
+                    <div class="call-to-action">
+                        <h3>Subscribe for Updates</h3>
+                        <p>Get the latest blog posts and exclusive content delivered to your inbox!</p>
+                        <a href="#" class="btn btn-small">Subscribe Now</a>
+                        </div>
+
+                    <div class="featured-content">
+                        <h3>Featured Content</h3>
+                        <a href="#">The Power of Visual Storytelling</a>
+                        <a href="#">Top 10 Copywriting Mistakes to Avoid</a>
+                        <a href="#">Boosting Your Website Traffic with SEO</a>
+                        </div>
+                </aside>
             </div>
 
             <div style="margin-top: 30px; text-align: center;">
@@ -97,4 +214,3 @@
 
 </body>
 </html>
-
