--- a/Home/blog-series.html
+++ b/Home/blog-series.html
@@ -164,6 +164,235 @@
                         </form>
                     </div>
 
+                    <div class="call-to-action">
+                        <div id="mc_embed_shell">
+                            <div id="mc_embed_signup">
+                                <form action="https://github.us5.list-manage.com/subscribe/post?u=d069c57b797a3947ed25f4918&amp;id=428802f650&amp;f_id=00b912ebf0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self" novalidate="">
+                                    <div id="mc_embed_signup_scroll"><h2>Get Email Updates</h2>
+                                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                        <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div><div class="mc-field-group"><label for="mce-FNAME">First Name </label><input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""></div>
+                                    <div id="mce-responses" class="clear foot">
+                                        <div class="response" id="mce-error-response" style="display: none;"></div>
+                                        <div class="response" id="mce-success-response" style="display: none;"></div>
+                                    </div>
+                                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                    /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
+                                    <input type="text" name="b_d069c57b797a3947ed25f4918_428802f650" tabindex="-1" value="">
+                                </div>
+                                    <div class="optionalParent">
+                                        <div class="clear foot">
+                                            <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                                            <p style="margin: 0px auto;"><a href="http://eepurl.com/jgJZIk" title="Mailchimp - email marketing made easy and fun"><span style="display: inline-block; background-color: transparent; border-radius: 4px;"><img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div class="featured-content">
+                        <h3>Featured Content</h3>
+                        <a href="#">The Power of Visual Storytelling</a>
+                        <a href="#">Top 10 Copywriting Mistakes to Avoid</a>
+                        <a href="#">Boosting Your Website Traffic with SEO</a>
+                        </div>
+                </aside>
+            </div>
+
+            <div style="margin-top: 30px; text-align: center;">
+                <p>Stay updated with our latest insights! Follow us on:</p>
+                <div class="footer-social-links" style="justify-content: center;">
+                    <a href="https://www.instagram.com/unstoppableyou_official1" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://x.com/_UnstoppableYou" target="_blank" aria-label="X (formerly Twitter)"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61553417041355" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <footer class="main-footer">
+        <div class="container">
+            <p>&copy; 2025 SOPHIST EMPIRE. All rights reserved.</p>
+            <div class="footer-social-links">
+                <a href="https://wa.me/qr/7IGZBEJKFFNFG1" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="mailto:sophconcity@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/SophistEmpire" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/unstoppableyou_official1" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61553417041355" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://x.com/_UnstoppableYou" target="_blank" aria-label="X (formerly Twitter)"><i class="fab fa-x-twitter"></i></a>
+                <a href="https://www.tiktok.com/@unstoppableyou_official" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+            </div>
+        </div>
+    </footer>
+
+</body>
+</html>
+ html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog & Content Series - SOPHIST EMPIRE</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        .content-area {
+            display: flex;
+            gap: 30px;
+        }
+        .main-content {
+            flex: 2; /* Takes up 2/3 of the available space */
+        }
+        .sidebar {
+            flex: 1; /* Takes up 1/3 of the available space */
+            background-color: #f9f9f9;
+            padding: 20px;
+            border: 1px solid #eee;
+            border-radius: 8px;
+        }
+        .sidebar h3 {
+            color: #007bff;
+            margin-top: 0;
+            margin-bottom: 15px;
+        }
+        .sidebar ul {
+            list-style: none;
+            padding-left: 0;
+            margin-bottom: 20px;
+        }
+        .sidebar ul li {
+            margin-bottom: 10px;
+        }
+        .sidebar a {
+            text-decoration: none;
+        }
+        .sidebar .search-bar form {
+            display: flex;
+        }
+        .sidebar .search-bar input[type="text"] {
+            width: 70%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px 0 0 5px;
+            box-sizing: border-box;
+        }
+        .sidebar .search-bar button[type="submit"] {
+            width: 30%;
+            padding: 10px;
+            margin-bottom: 15px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 0 5px 5px 0;
+            cursor: pointer;
+        }
+        .sidebar .call-to-action {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #e9ecef;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .sidebar .featured-content a {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        /* Responsive layout - make the sidebar stack on top of the content on small screens */
+        @media (max-width: 768px) {
+            .content-area {
+                flex-direction: column;
+            }
+            .sidebar {
+                width: 100%;
+                margin-top: 30px;
+            }
+            .sidebar .search-bar form {
+                display: block; /* Make form elements stack on small screens */
+            }
+            .sidebar .search-bar input[type="text"] {
+                width: 100%;
+                border-radius: 5px; /* Full rounded corners when stacked */
+                margin-bottom: 10px;
+            }
+            .sidebar .search-bar button[type="submit"] {
+                width: 100%;
+                border-radius: 5px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header class="main-header">
+        <div class="container">
+            <a href="index.html" class="logo">
+                <img src="images/sophist-empire-logo-gold-white-1.png" alt="SOPHIST EMPIRE Logo">
+            </a>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#about">About Us</a></li>
+                    <li><a href="index.html#portfolio">Portfolio</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="blog-series.html">All Blog Posts</a></li>
+                    </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div class="container">
+        <section class="content-section">
+            <h2>Our Blog & Content Series</h2>
+            <img src="images/blog-series-thumbnail.jpg" alt="Blog Series Thumbnail" style="max-width: 300px; margin: 20px auto; display: block;">
+            <p>Welcome to the SOPHIST EMPIRE blog, your destination for in-depth articles and comprehensive series on creative digital solutions, effective copywriting, and impactful content marketing. Dive into our latest insights and learn how to elevate your online presence.</p>
+
+            <div class="content-area">
+                <main class="main-content">
+                    <h3>Full Blog Series</h3>
+
+                    <div class="blog-post" style="margin-bottom: 40px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
+                        <h4>[Title of Your First Blog Post]</h4>
+                        <p>June 9, 2025</p>
+                        <img src="images/website-creation-thumbnail.jpg" alt="Abstract brain or lightbulb" style="max-width: 100%; margin-bottom: 15px;">
+                        <p>Creativity isn't a magical gift; it's a muscle you can train. In this post, we explore simple yet powerful techniques to unlock your creative potential. From brainstorming exercises to changing your environment, discover how to spark innovation and bring fresh ideas to your digital projects.</p>
+                    </div>
+
+                    <div class="blog-post" style="margin-bottom: 40px; border-bottom: 1px solid #eee; padding-bottom: 30px;">
+                        <h4>[Title of Your Second Blog Post]</h4>
+                        <p>June 9, 2025</p>
+                        <img src="images/sales-page-thumbnail.jpg" alt="Stylized upward arrow or graph" style="max-width: 100%; margin-bottom: 15px;">
+                        <p>Words have the power to persuade, connect, and convert. Learn the art of crafting compelling copy that resonates with your audience and drives results. We'll cover key principles of persuasive writing, from understanding your audience to writing effective calls to action.</p>
+                    </div>
+
+                    </main>
+
+                <aside class="sidebar">
+                    <h3>Navigation</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#portfolio">Portfolio</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="blog-series.html">All Blog Posts</a></li>
+                        </ul>
+
+                    <h3>About the Author</h3>
+                    <p>Learn more about Maruf, the founder of SOPHIST EMPIRE and the voice behind this blog.</p>
+                    <a href="index.html#about">Read More</a>
+
+                    <div class="search-bar">
+                        <h3>Search</h3>
+                        <form action="https://www.google.com/search" method="get" target="_blank">
+                            <input type="hidden" name="sitesearch" value="sophistempire.github.io">
+                            <input type="text" name="q" placeholder="Search our blog...">
+                            <button type="submit"><i class="fas fa-search"></i></button>
+                        </form>
+                    </div>
+
                     <h3>Follow Us</h3>
                     <ul class="footer-social-links" style="display: flex; flex-direction: column; align-items: flex-start;">
                         <li><a href="https://www.instagram.com/unstoppableyou_official1" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i> Instagram</a></li>
